k8s/kustomization/bases/client/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-client
  labels:
    app: patient-client
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      restartPolicy: Always
      containers:
        - name: client
          image: starter/client-dev
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "400m"
              memory: "800Mi"
